--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
   },
   "type": "module",
   "dependencies": {
+    "@svelteuidev/composables": "^0.8.0",
+    "@svelteuidev/core": "^0.8.0",
+    "radix-icons-svelte": "^1.2.1",
     "svelte-burger-menu": "^2.0.5",
     "svelte-icons": "^2.1.0",
     "svelte-tailwind-cookieconsent": "^0.0.15"
